# openapi-gateway

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.example.yml
docker/example/: openapi-gateway-config.toml
redoc/: index.html
src/: config.rs  gateway.rs  main.rs  openapi.rs  ui.rs  web.rs
src/gateway/: openapi.rs
src/web/: handler.rs
swagger-ui/: index.html
