[package]
name = "openapi-gateway"
version = "0.1.1"
edition = "2021"
description = "API Gateway based on OpenAPI routes"
license-file = "LICENSE"
documentation = "https://docs.rs/openapi-gateway"
homepage = "https://github.com/adhesivee/openapi-gateway"
repository = "https://github.com/adhesivee/openapi-gateway"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4"
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
tower = { version = "0.4", features = ["make"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
toml = "0.5"
thiserror = "1"
hyper-rustls = { version = "0.23", features = ["http1", "webpki-roots"] }
base64 = "0.13"
regex = "1.5"
cron-parser = "0.7"
chrono = "0.4"